applications/it-tools/it-tools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: it-tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  hostnames:
  - it-tools.linuxadmin.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: it-tools-service
      port: 80
