applications/it-tools/netpol.yaml
---
# egress:
# - Internet not allowed except DNS
# - block communication to other namespaces in k8s
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-external
  namespace: it-tools
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Rule 1: Allow egress to pods within the same namespace
    - to:
        - podSelector: {} # This targets all pods within the same namespace
    # Rule 2: Allow egress to Kubernetes DNS (CoreDNS)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system # Selects the kube-system namespace
          podSelector:
            matchLabels:
              k8s-app: kube-dns # Selects the CoreDNS pods within kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # - to:
    #   - ipBlock:
    #       cidr: 0.0.0.0/0
    #       # Exclude traffic to Kubernetes service IPs and pods
    #       except:
    #         - 10.0.0.0/8
    #         - 172.16.0.0/12
    #         - 192.168.0.0/16
